--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,85 @@
-streamlit==1.31.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.0
+dataclasses-json==0.6.7
+distro==1.9.0
+frozenlist==1.6.0
+gitdb==4.0.12
+GitPython==3.1.44
+groq==0.4.2
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+importlib_metadata==7.2.1
+Jinja2==3.1.6
+jiter==0.9.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
 langchain==0.1.8
 langchain-community==0.0.21
 langchain-core==0.1.24
-langchain-openai==0.0.6
-mysql-connector-python==8.3.0
-groq==0.4.2
 langchain-groq==0.0.1
+langchain-openai==0.0.6
+langsmith==0.1.147
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+mdurl==0.1.2
+multidict==6.4.3
+mypy_extensions==1.1.0
+mysql-connector-python==8.3.0
+narwhals==1.39.1
+numpy==2.2.5
+openai==1.78.1
+orjson==3.10.18
+packaging==23.2
+pandas==2.2.3
+pillow==10.4.0
+propcache==0.3.1
+protobuf==4.25.7
+pyarrow==20.0.0
+pydantic==2.11.4
+pydantic_core==2.33.2
+pydeck==0.9.1
+Pygments==2.19.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2025.2
+PyYAML==6.0.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+rich==13.9.4
+rpds-py==0.25.0
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+SQLAlchemy==2.0.41
+streamlit==1.31.1
+tenacity==8.5.0
+tiktoken==0.9.0
+toml==0.10.2
+tornado==6.5
+tqdm==4.67.1
+typing-inspect==0.9.0
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.4.0
+validators==0.35.0
+yarl==1.20.0
+zipp==3.21.0
